Add script to verify session set and get

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
 
     <button id="get-button">Get</button>
 
+    <button id="remove-button">Remove</button>
+
+    <button id="clear-button">Clear</button>
+
     <script src="script.js"></script>
 
 </body>
