Add button to verify all session storage APIs

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 
     <button id="set-button">Set</button>
 
-    <button id="get-button">Get</button>
+    <button id="get-button">Get (all)</button>
+
+    <button id="get-store-button">Get (store)</button>
 
     <button id="remove-button">Remove</button>
 
